# Weekend_Programming

./: .gitignore  README.md  Weekend_Programming.code-workspace  cpp.code-workspace  flutter.code-workspace  go.work  go.work.sum  java.code-workspace  js.code-workspace  kotlin.code-workspace  llvm.code-workspace  marp.code-workspace  mysql.md  net.code-workspace  pascal.code-workspace  python.code-workspace  rust.code-workspace  swift.code-workspace  unity.code-workspace  vscodeExtensions.md
rust/ITWebApp/actix-sample/: Cargo.toml  data.json
rust/ITWebApp/actix-sample/src/: handler.rs  main.rs
rust/ITWebApp/actix-sample/src/handler/: data.rs
rust/ITWebApp/actix-sample/static/: form.html
rust/ITWebApp/actix-sample/templates/: base.html  form.html  index.html  show.html
rust/ITWebApp/dioxus-posts/: Cargo.toml
rust/ITWebApp/dioxus-posts/src/: data.rs  main.rs
rust/PerfectRust/Chapter10/association/: Cargo.toml
rust/PerfectRust/Chapter10/association/resources/: products.csv  products.json
rust/PerfectRust/Chapter10/association/src/: main.rs  traits.rs  traits_impl.rs  try_out.rs
rust/PerfectRust/Chapter10/generics/: Cargo.toml
rust/PerfectRust/Chapter10/generics/src/: entities.rs  main.rs  services.rs  sub.rs  trait.rs  traits.rs  traits_impl.rs  try_out.rs
rust/PerfectRust/Chapter15/mongodb_sample/: Cargo.toml
rust/PerfectRust/Chapter15/mongodb_sample/src/: connect.rs  entities.rs  main.rs  product_repository.rs  repository.rs
rust/PerfectRust/Chapter16/seaorm_sample/: .env  Cargo.toml
rust/PerfectRust/Chapter16/seaorm_sample/src/: main.rs  pool.rs
rust/PerfectRust/Chapter16/seaorm_sample/src/models/: prelude.rs  product_category.rs
rust/PerfectRust/Chapter16/seaorm_sample/src/repository/: mod.rs  product_category_repository.rs  product_repository.rs  repository.rs
rust/PerfectRust/Chapter17/actix_web_sample/: Cargo.toml
rust/PerfectRust/Chapter17/actix_web_sample/src/: main.rs
rust/PerfectRust/Chapter17/actix_web_sample/src/handlers/: handler_func.rs  mod.rs  tera_handler.rs
rust/PerfectRust/Chapter17/actix_web_sample/views/pages/: enter.html  layout.html  result.html
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/: Cargo.toml  local-key.pem  local.pem  localhost-key.pem  localhost.pem
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/: lib.rs  login_form.rs  main.rs  product_regist_form.rs  product_search_form.rs  validation_error.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/api/handlers/: app_error.rs  authenticate_handler.rs  claims.rs  jwt.rs  mod.rs  product_register_handler.rs  product_search_handler.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/handlers/: ProductRegisterHandler.rs  error.rs  mod.rs  product_register_handler.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/helpers/: SessionHelper.rs  mod.rs  session_helper.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/: error.rs  mod.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/application/: mod.rs  service_provider.rs  user_service.rs  user_service_impl.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/commons/: dtos.rs  forms.rs  jwt.rs  mod.rs  validator.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/domain/: converter.rs  entity.rs  mail.rs  mod.rs  password.rs  user.rs  user_id.rs  user_repository.rs  username.rs  value_object.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/infrastructure/: mod.rs  pool.rs  pool_sea_orm.rs  user_converter_sea_orm.rs  user_repository_sea_orm.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/service/models/: mod.rs  product.rs  user.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/view/: mod.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/view/forms/: login_form.rs  product_regist_form.rs  product_search_form.rs  validation_error.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/view/handlers/: authenticate.rs  authenticate_handler.rs  error.rs  jwt.rs  menu_error.rs  mod.rs  product_register_handler.rs  register.rs  search.rs  session_helper.rs  view_helper.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/web/forms/: login_form.rs  mod.rs  product_regist_form.rs  product_search_form.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/src/web/handlers/: authenticate_handler.rs  error.rs  jwt.rs  mod.rs  product_register_handler.rs  session_helper.rs
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/views/pages/error/: error.html
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/views/pages/layout/: layout.html
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/views/pages/login/: login.html
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/views/pages/menu/: menu.html
rust/PerfectRust/Chapter18/actix_web_sample2_cookie/views/pages/register/: enter.html  (+1 more)
rust/PerfectRust/Chapter18/actix_web_sample2_redis/: Cargo.toml
rust/PerfectRust/Chapter18/actix_web_sample2_redis/src/: main.rs
rust/dioxus-sample2/: Cargo.toml
rust/dioxus/dioxus-sample/: Cargo.toml
rust/tauri-app-win/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri-app-win/tauri-app/src-tauri/src/: lib.rs  main.rs
rust/tauri/tauri-app-mac/tauri-mac-ios-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-mac/tauri-mac-ios-app/src-tauri/src/: main.rs
rust/tauri/tauri-app-win/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-win/tauri-app/src-tauri/src/: lib.rs  main.rs
rust/tauri/tauri-app-win/tauri2-base-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-win/tauri2-beta-app/src-tauri/: Cargo.toml
rust/tauri/tauri-app-wsl2/tauri2-base-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-wsl2/tauri2-base-app/src-tauri/src/: main.rs
rust/tauri/tauri-app-wsl2/tauri2-beta-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-wsl2/tauri2-rc-app/src-tauri/: Cargo.toml  tauri.conf.json
rust/tauri/tauri-app-wsl2/tauri2-rc-app/src-tauri/src/: main.rs
(+4851 files in other folders)
