[package]
name = "dioxus-sample2"
version = "0.1.0"
authors = ["Shinya Watanabe <48684470+Tatsukiyoshi@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
