[package]
name = "dioxus-posts5"
version = "0.1.0"
authors = ["Shinya Watanabe <48684470+Tatsukiyoshi@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

dioxus-web = "0.5.1"
log = "0.4.21"
im-rc = "15.1.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
