[package]
name = "dioxus-posts"
version = "0.3.0"
authors = ["Shinya Watanabe <48684470+Tatsukiyoshi@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.83"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.1", features = ["web"] }

# Debug
tracing = "0.1.41"
dioxus-logger = "0.6.1"
dioxus-web = "0.6.1"
log = "0.4.22"
im-rc = "15.1.0"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
