[package]
name = "association"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
serde = {version = "1.0.189", features = ["derive"]}
csv = "1.3.0"
serde_json = "1.0.107"
