[package]
name = "generics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }   # 汎用的なResult型、Error型を提供
serde = {version = "1.0.189", features = ["derive"]}    # シリアライズ、デシリアライズ機能
serde_json = "1.0.107"  # JSONデータのシリアライズ、デシリアライズ機能
csv = "1.3.0"           # CSVファイルアクセス機能を提供
