[package]
name = "mongodb_sample"
version = "0.2.3"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3.2.1"
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0.218", features = ["derive"]}
futures-util = "0.3.31"
anyhow = "1.0.96"
lombok = "0.4.0"
async-trait = "0.1.86"
