[package]
name = "mongodb_sample"
version = "0.2.4"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3.2.2"
tokio = {version = "1.44.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
futures-util = "0.3.31"
anyhow = "1.0.97"
lombok = "0.4.0"
async-trait = "0.1.87"
