[package]
name = "seaorm_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.10" , features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
proc-macro2 = "1.0.71"
lombok = "0.4.0"
async-trait = "0.1.75"
anyhow = "1.0.76"
dotenv = "0.15.0"
chrono = "0.4.31"
log = "0.4.20"
env_logger = "0.10.1"
