[package]
name = "actix_web_sample"
version = "0.1.3"
edition = "2021"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-http = "3.10.0"
tera = "1.20.0"
mime = "0.3.17"
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.97"
dotenv = "0.15.0"
serde = {version = "1.0.219", features = ["derive"]}
sea-orm = { version = "1.1.8" , features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
http = "1.3.1"
time = "0.3.41"