[package]
name = "actix_web_sample2_cookie"
version = "0.1.3"
edition = "2021"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.10.2", features = ["openssl"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-http = "3.10.0"
tera = "1.20.0"
mime = "0.3.17"
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.97"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
http = "1.3.1"
thiserror = "2.0.12"
validator = {version = "0.20.0", features = ["derive"]}
openssl = { version = "0.10.72", features = ["v110"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
easy-hasher = "2.2.1"
async-trait = "0.1.88"
tokio = {version = "1.44.1", features = ["full"]}
rusty-money = "0.4.1"
time = "0.3.41"