[package]
name = "actix_web_sample2_redis"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-session = {version = "0.9.0", features = ["redis-rs-session", "redis-rs-tls-session"]}
actix-http = "3.5.1"
tera = "1.19.1"
mime = "0.3.17"
env_logger = "0.11.0"
log = "0.4.20"
anyhow = "1.0.79"
dotenv = "0.15.0"
serde = {version = "1.0.195", features = ["derive"]}
sea-orm = { version = "0.12.11" , features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }
http = "1.0.0"
