[package]
name = "actix_web_sample2_redis"
version = "0.1.2"
edition = "2021"
rust-version = "1.86.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-session = {version = "0.9.0", features = ["redis-rs-session", "redis-rs-tls-session"]}
time = "0.3.41"
