[package]
name = "tauri-app"
version = "0.5.8"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "tauri-app"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "icon-ico", "system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
