[package]
name = "tauri-app"
version = "0.6.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "tauri-app"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
tauri = { version = "2.0.0-beta.13", features = [ "tray-icon", "image-ico"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
