[package]
name = "tauri2-beta-app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri2_beta_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.5", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.5", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
