[package]
name = "tauri2-beta-app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri2_beta_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.8", features = [] }
tauri-plugin-shell = "2.0.0-rc.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
