[package]
name = "tauri2-base-app"
version = "1.0.3"
description = "A Tauri App Base 2.0"
authors = ["you"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri2_base_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
