[package]
name = "tauri2-beta-app"
version = "0.2.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
