[package]
name = "tauri2-rc-app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri2_rc_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
